<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BourseWatcher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aapl">AAPL</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="market">Le marché</string>
    <string name="search_hint">Rechercher une entreprise</string>
    <string name="best_stocks">Les meilleurs performances\n</string>
    <string name="favorites">Mes favoris</string>
    <string name="apple_inc">Apple Inc.</string>
    <string name="wallet_title">Mon portefeuille</string>
    <string name="title_activity_add_stock">AddStockActivity</string>
    <string name="ajouter_une_action">Ajouter une action</string>
    <string name="symbole_company">Symbole de l\'entreprise</string>
    <string name="quantite">Quantité</string>
    <string name="ajouter">Ajouter</string>
    <string name="mon_solde">Mon solde</string>
    <string name="mes_actions">Mes actions</string>
    <string name="prix_d_achat">Prix d\'achat</string>
    <string name="news">Mes news</string>
    <string name="faq_title">FAQ - Foire aux questions</string>
    <string name="faq_title_1">1. Qu\'est-ce que l\'application BourseWatcher?</string>
    <string name="faq_text_1">"L\'application BourseWatcher est une application mobile conçue pour vous aider à suivre et à gérer vos investissements sur le marché boursier. Elle offre des fonctionnalités pour suivre les cours des actions, et obtenir des informations financières en temps réel.</string>
    <string name="faq_title_2">2. Puis-je obtenir des alertes sur les fluctuations du marché?</string>
    <string name="faq_text_2">Oui, l\'application vous permet de configurer des alertes pour être informé des fluctuations importantes du marché ou des mouvements de prix de vos actions. Vous pouvez personnaliser les alertes en fonction de vos préférences.</string>
    <string name="faq_title_3">3. Comment puis-je suivre les actualitées financières?</string>
    <string name="faq_text_3">L\'application offre une section d\'actualités financières où vous pouvez suivre les dernières nouvelles, analyses et rapports sur le marché boursier. Vous pouvez également personnaliser vos préférences pour recevoir des nouvelles pertinentes.</string>
    <string name="faq_title_4">4. L\'application est-elle disponible dans d\'autres langues?</string>
    <string name="faq_text_4">Actuellement, l\'application est disponible en Français, Anglais, Chinois et Espagnol. Nous travaillons constamment à l\'ajout de nouvelles langues pour améliorer l\'accessibilité.</string>
    <string name="faq_title_5">5. Quels sont les risques liés à l\'investissement en bourse ?</string>
    <string name="faq_text_5">L\'investissement en bourse comporte toujours un risque de perte. Les causes de perte peuvent être multiples, notamment : La baisse des cours : les cours des actions peuvent baisser, ce qui peut entraîner une perte de capital. La faillite d\'une entreprise : si une entreprise fait faillite, les investisseurs en actions de cette entreprise peuvent perdre tout ou partie de leur investissement. Les frais : les frais de courtage et les autres frais liés à l\'investissement en bourse peuvent réduire le rendement des investissements.</string>
    <string name="faq_title_6">6. Quelle est l\'utilité d\'une application de gestion d\'actif en bourse ?</string>
    <string name="faq_text_6">Une application de gestion d\'actif en bourse permet aux investisseurs de suivre et gérer leurs investissements en bourse de manière simple et intuitive. Elle offre un ensemble de fonctionnalités permettant de : Suivre l\'évolution de ses investissements en temps réel, Effectuer des transactions en bourse, Gérer son portefeuille d\'investissements, Comparer les performances de ses investissements</string>
    <string name="default_percentage">0,00%</string>
    <string name="default_price">0.00 €</string>
    <string name="valeur_du_portefeuille">Valeur du portefeuille</string>
    <string name="parametres">Paramètres</string>
    <string name="account_details">Compte, Sécurité, Confidentialité ...</string>
    <string name="bourse_defaut">Bourse par défaut</string>
    <string name="devise_defaut">Devise par défaut</string>
    <string name="mode">Mode</string>
    <string name="notifications">Notifications</string>
    <string name="langues">Langues</string>
    <string name="faq">FAQ</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="euro">Euro (€)</string>
    <string name="dollard">Dollard ($)</string>
    <string name="yuan">Yuan (¥)</string>
    <string name="pound">Pound (£)</string>
    <string name="nasdaq">NASDAQ</string>
    <string name="nyse">NYSE</string>
    <string name="lse">LSE</string>
    <string name="tse">TSE</string>
    <string name="francais">Français</string>
    <string name="english">English</string>
    <string name="chinois">繁体中文</string>
    <string name="espanol">Español</string>
    <string name="debutant">Débutant</string>
    <string name="intermediaire">Intermédiaire</string>
    <string name="expert">Expert</string>
    <string name="jour">JOUR</string>
    <string name="sem">SEM.</string>
    <string name="mois">MOIS</string>
    <string name="annee">ANNEE</string>
    <string name="ouverture">Ouverture</string>
    <string name="min">Min.</string>
    <string name="max">Max.</string>
    <string name="cap_boursiere">Cap. boursière</string>
    <string name="vol_moyen">Vol. moyen</string>
    <string name="rsi">RSI.</string>
    <string name="m_inscrire">M\'inscrire</string>
    <string name="prenom">Prénom</string>
    <string name="nom">NOM</string>
    <string name="votre_e_mail">Votre e-mail</string>
    <string name="votre_mot_de_passe">Votre mot de passe</string>
    <string name="d_j_inscrit_connexion">Déjà inscrit ? Connexion</string>
    <string name="valider">Valider</string>
    <string name="me_connecter">Me connecter</string>
    <string name="pas_encore_de_compte_inscription">Pas encore de compte ? Inscription</string>
    <string name="scanner_un_qr_code">Scanner un QR Code</string>
    <string name="ajouter_un_portefeuille">Ajouter un portefeuille</string>
    <string name="mes_amis">Mes amis</string>
    <string name="mon_portefeuille">Mon portefeuille</string>
    <string name="nom_de_l_ami">Nom de l\'ami</string>
    <string name="mes_demandes_d_amis">Mes demandes d\'amis</string>
    <string name="date_d_achat">Date d\'achat</string>
    <string name="d_tails_du_portefeuille">Détails du portefeuille</string>
    <string name="votre_nom_amp_pr_nom"><![CDATA[Votre nom & prénom]]></string>
    <string name="editer_mon_profil">Editer mon profil</string>
    <string name="annuler">Annuler</string>
    <string name="ERROR_add_self">Vous ne pouvez pas vous ajouter vous même</string>
    <string name="ERROR_friend_exist">Vous êtes déjà amis</string>
    <string name="sucess_add_friend_p1">"Votre ami "</string>
</resources>