<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.settings_fragment.SettingFAQFragment"
    android:background="#EEEEEE">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parametres"
        android:fontFamily="@font/jomhuria"
        android:textSize="64sp"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ScrollView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="20dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_title_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_1"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:id="@+id/tv_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_1"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_1"/>

                <TextView
                    android:id="@+id/tv_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_2"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_2"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_2"/>

                <TextView
                    android:id="@+id/tv_title_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_3"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_3"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_3"/>

                <TextView
                    android:id="@+id/tv_title_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_4"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_text_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_4"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_4"/>

                <TextView
                    android:id="@+id/tv_title_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_5"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_text_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_5"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_5"/>

                <TextView
                    android:id="@+id/tv_title_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_title_6"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_text_5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/tv_text_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text_6"
                    android:textColor="#1F1F1F"
                    android:fontFamily="@font/plus_jakarta_sans"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_6"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>



</FrameLayout>