<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/close"
        android:layout_width="100dp"
        android:layout_height="7dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1F1F1F"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasdaq"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nyse"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/rb_1"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lse"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/rb_2"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tse"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/rb_3"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </RadioGroup>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
