<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.LoginActivity">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/me_connecter"
            android:fontFamily="@font/jomhuria"
            android:textSize="64sp"
            android:gravity="center"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_margin="16dp"
            android:hint="@string/votre_e_mail"
            app:endIconMode="clear_text"
            app:startIconContentDescription="Votre e-mail"
            android:outlineProvider="background"
            android:layout_marginTop="80dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:outlineProvider="background"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            android:layout_margin="16dp"
            android:hint="@string/votre_mot_de_passe"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="Votre mot de passe"
            android:outlineProvider="background"
            app:boxStrokeColor="#1F1F1F"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="64dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:outlineProvider="background"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/valider"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="#1F1F1F"
            android:textColor="#FFFFFF"
            app:circularflow_radiusInDP="100dp"/>

        <TextView
            android:id="@+id/tv_not_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom = "50dp"
            android:text="@string/pas_encore_de_compte_inscription"
            android:gravity="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>