<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/close"
        android:layout_width="100dp"
        android:layout_height="7dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1F1F1F"/>

    <RadioGroup
        android:id="@+id/rg_langages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/francais"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_china"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinois"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_spain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espanol"
            android:layout_margin="10dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textSize="20sp"
            android:buttonTint="#1F1F1F"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </RadioGroup>


</androidx.coordinatorlayout.widget.CoordinatorLayout>